Navigation: links ae lined up on the left side and can be clicked although not visible - fixed by setting visibility:hidden when navigation is closed - set visibility:visible when the navigation is open

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -58,6 +58,7 @@
 
     // hide the __nav as the initial state
     opacity: 0;
+    visibility: hidden;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
@@ -111,6 +112,7 @@
 
   &__checkbox:checked ~ &__nav {
     opacity: 1;
+    visibility: visible;
     width: 100%;
   }
 
